// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressOverviewTile component should render correctly 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    color="black"
    fontFamily="secondary"
    fontSize="fs16"
    locator=""
    text="Address Book"
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs16"
        locator=""
        text="Default Shiping Address"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        anchorVariation="primary"
        color="gray.900"
        customStyle={Object {}}
        data-locator="addressbook-overview-edit"
        fontSizeVariation="large"
        locator=""
        noLink={true}
        onPress={[Function]}
        text="Add"
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    locator=""
    text="You have not added an address yet."
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs16"
        locator=""
        text="Default Billing Address"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        anchorVariation="primary"
        color="gray.900"
        customStyle={Object {}}
        data-locator="addressbook-makedefault"
        fontSizeVariation="large"
        lineHeight="10"
        locator=""
        noLink={true}
        onPress={[Function]}
        text="Add"
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    locator=""
    text="You have not added an address yet."
  />
  <Styled(View)>
    <Styled(CustomButton)
      buttonVariation="variable-width"
      color="white"
      customStyle={Object {}}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      locator=""
      onPress={[Function]}
      text="View Address Book"
      url=""
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`AddressOverviewTile render empty address component should render correctly 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    color="black"
    fontFamily="secondary"
    fontSize="fs16"
    locator=""
    text=""
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs16"
        locator=""
        text=""
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        anchorVariation="primary"
        color="gray.900"
        customStyle={Object {}}
        data-locator="addressbook-overview-edit"
        fontSizeVariation="large"
        locator=""
        noLink={true}
        onPress={[Function]}
        text=""
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    locator=""
    text=""
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs16"
        locator=""
        text=""
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        anchorVariation="primary"
        color="gray.900"
        customStyle={Object {}}
        data-locator="addressbook-makedefault"
        fontSizeVariation="large"
        lineHeight="10"
        locator=""
        noLink={true}
        onPress={[Function]}
        text=""
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    locator=""
    text=""
  />
  <Styled(View)>
    <Styled(CustomButton)
      buttonVariation="variable-width"
      color="white"
      customStyle={Object {}}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      locator=""
      onPress={[Function]}
      text=""
      url=""
    />
  </Styled(View)>
</Styled(View)>
`;
